added media queries

--- a/estilos.css
+++ b/estilos.css
@@ -384,3 +384,29 @@ figure {
   height: inherit;
   flex-wrap: inherit;
 }
+
+/* DESKTOP FIRST EMPEZAR DESDE EL MEDIA QUERY MAS GRANDE */
+
+@media screen and (max-width: 1024px) {
+  body {
+    border: 10px solid green;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    border: 10px solid green;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    border: 10px solid green;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  body {
+    border: 10px solid green;
+  }
+}
