--- a/estilos.css
+++ b/estilos.css
@@ -109,7 +109,7 @@ h2 {
   display: flex; 
   align-items: center;
   justify-content: space-between;
-
+  flex-wrap: wrap;
 }
 
 .hero-image{
@@ -148,6 +148,7 @@ h2 {
   background: white;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .project-course,
@@ -211,6 +212,7 @@ figure {
   display: flex;
   height: 90px;
   justify-content: space-between;
+  flex-wrap: wrap;
   /* align-items: center; */
 }
 
@@ -256,6 +258,7 @@ figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer img {
@@ -318,6 +321,7 @@ figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .social {
@@ -376,7 +380,7 @@ figure {
 }
 
  .container {  /*importante para entender como esta clase alinea las seccion y h's de la pagina */
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
@@ -389,24 +393,24 @@ figure {
 
 @media screen and (max-width: 1024px) {
   body {
-    border: 10px solid green;
+    /* border: 10px solid green; */
   }
 }
 
 @media screen and (max-width: 768px) {
   body {
-    border: 10px solid green;
+    /* border: 10px solid green; */
   }
 }
 
 @media screen and (max-width: 480px) {
   body {
-    border: 10px solid green;
+    /* border: 10px solid green; */
   }
 }
 
 @media screen and (max-width: 320px) {
   body {
-    border: 10px solid green;
+    /* border: 10px solid green; */
   }
 }
