responsive header done

--- a/estilos.css
+++ b/estilos.css
@@ -381,6 +381,8 @@ figure {
 
  .container {  /*importante para entender como esta clase alinea las seccion y h's de la pagina */
   max-width: 1000px;
+  /* width: 100%; */
+  flex: 1;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
@@ -397,10 +399,28 @@ figure {
   }
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    /* border: 10px solid green; */
+@media screen and (max-width: 767px) {
+  .header {
+    display: block;
+    height: auto;
   }
+  .header ol {
+    display: block;
+  }
+
+  .header ol li {
+    height: 50px;
+    text-align: center;
+  }
+
+  .header a {
+    justify-content: center;
+  }
+
+  .header .logo {
+    text-align: center;
+  }
+
 }
 
 @media screen and (max-width: 480px) {
