mp4 video insterted

--- a/estilos.css
+++ b/estilos.css
@@ -497,6 +497,12 @@ figure {
   }
 }
 
+.html-video {
+  width: 100%;
+  height: auto;
+  /* max-width: 100%; */
+}
+
 @media screen and (max-width: 480px) {
   h1 {
     font-size: 1.5em;
