--- a/estilos.css
+++ b/estilos.css
@@ -503,6 +503,27 @@ figure {
   /* max-width: 100%; */
 }
 
+.youtube-vive {
+  /* width: 100%;
+  height: auto; */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.flexible-video {
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+  background: blue;
+  position: relative;
+}
+
+
 @media screen and (max-width: 480px) {
   h1 {
     font-size: 1.5em;
