--- a/estilos.css
+++ b/estilos.css
@@ -426,6 +426,21 @@ figure {
   flex-wrap: inherit;
 }
 
+.burger-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(0,0,0, .8);
+  display: none;
+  line-height: 40px;
+  text-align: center;
+  position: fixed;
+  z-index: 4;
+  left: 5px;
+  top: 5px;
+  color: white;
+}
+
 /* DESKTOP FIRST EMPEZAR DESDE EL MEDIA QUERY MAS GRANDE */
 
 @media screen and (max-width: 1024px) {
@@ -454,10 +469,13 @@ figure {
     font-size: 2em;
     z-index: 2;
   }
-
 }
 
 @media screen and (max-width: 767px) {
+  .burger-button {
+    display: block;
+  }
+  
   .header {
     display: block;
     height: auto;
